RESOLVED FIXED297570
[First-Letter] Fix ::first-letter disappearing after style change.
https://bugs.webkit.org/show_bug.cgi?id=297570
Summary [First-Letter] Fix ::first-letter disappearing after style change.
Yulun Wu
Reported 2025-08-18 19:44:51 PDT
Attachments
[fast-cq]Patch (8.13 KB, patch)
2026-04-14 05:42 PDT, alan
ews-feeder: commit-queue-
Yulun Wu
Comment 1 2025-08-18 19:48:31 PDT
alan
Comment 2 2026-04-14 05:42:58 PDT
Created attachment 479062 [details] [fast-cq]Patch
EWS
Comment 3 2026-04-14 07:55:27 PDT
Committed 311201@main (ae4576e425cf): <https://commits.webkit.org/311201@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479062 [details].
Note You need to log in before you can comment on or make changes to this bug.